# skills

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  OPERATIONS.md  PROMPT_CLI.md  QUICKSTART.md  README.md  config.example.yaml
.github/: README.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docker.yml  release.yml
.skills/: config.yaml
crates/skillsrs-cli/: Cargo.toml
crates/skillsrs-cli/src/: main.rs  paths.rs
crates/skillsrs-core/: Cargo.toml
crates/skillsrs-core/src/: lib.rs  persistence.rs
crates/skillsrs-index/: Cargo.toml
crates/skillsrs-index/src/: lib.rs  lib.rs.bak
crates/skillsrs-mcp/: Cargo.toml
crates/skillsrs-mcp/src/: lib.rs
crates/skillsrs-policy/: Cargo.toml
crates/skillsrs-policy/src/: lib.rs  lib.rs.bak
crates/skillsrs-registry/: Cargo.toml
crates/skillsrs-registry/src/: lib.rs  lib.rs.bak
crates/skillsrs-runtime/: Cargo.toml
crates/skillsrs-runtime/src/: lib.rs  sandbox.rs
crates/skillsrs-skillstore/: Cargo.toml
crates/skillsrs-skillstore/src/: agent_skills.rs  lib.rs  sync.rs
crates/skillsrs-skillstore/tests/: agent_skills_tests.rs
crates/skillsrs-upstream/: Cargo.toml
crates/skillsrs-upstream/src/: lib.rs
docs/: LLM_BEST_PRACTICES.md  LLM_EXAMPLES.md  LLM_QUICK_REFERENCE.md  MCP_GUIDE.md  OPERATIONS.md  PROMPT_CLI_EXTENDED.md  PROMPT_MCP.md  PROMPT_MCP_EXTENDED.md  QUICKSTART.md  SKILLS.md  TUTORIAL.md  config.example.yaml
scripts/: verify_fixes.sh
src/: lib.rs  main.rs  paths.rs
src/core/: mod.rs  persistence.rs  policy.rs  registry.rs
src/execution/: mod.rs  sandbox.rs  upstream.rs  wasm.rs
src/mcp/: mod.rs
src/storage/: agent_skills.rs  mod.rs  search.rs  sync.rs
tests/: core_test.rs  execution_test.rs  integration_test.rs  mcp_test.rs  paths_test.rs  storage_test.rs  wasm_sandbox_test.rs
