[workspace]
members = [
    "crates/skillsrs-core",
    "crates/skillsrs-registry",
    "crates/skillsrs-index",
    "crates/skillsrs-upstream",
    "crates/skillsrs-skillstore",
    "crates/skillsrs-runtime",
    "crates/skillsrs-policy",
    "crates/skillsrs-mcp",
    "crates/skillsrs-cli", # This is the main binary crate (skillsrs)
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["skills.rs team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/labiium/skills"

[workspace.dependencies]
# Internal crates
skillsrs-core = { version = "0.1.6", path = "crates/skillsrs-core" }
skillsrs-registry = { version = "0.1.6", path = "crates/skillsrs-registry" }
skillsrs-index = { version = "0.1.6", path = "crates/skillsrs-index" }
skillsrs-upstream = { version = "0.1.6", path = "crates/skillsrs-upstream" }
skillsrs-skillstore = { version = "0.1.6", path = "crates/skillsrs-skillstore" }
skillsrs-runtime = { version = "0.1.6", path = "crates/skillsrs-runtime" }
skillsrs-policy = { version = "0.1.6", path = "crates/skillsrs-policy" }
skillsrs-mcp = { version = "0.1.6", path = "crates/skillsrs-mcp" }

# MCP SDK (official Rust implementation)
rmcp = { version = "0.14.0", features = ["server"] }
rmcp-macros = "0.14.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.13", features = ["json", "stream"] }

# JSON Schema validation (using schemars which rmcp uses)
jsonschema = "0.18"
schemars = { version = "1.2", features = ["derive"] }

# Hashing
blake3 = "1.5"

# Indexing/Search
tantivy = "0.25"

# Filesystem watching
notify = "8.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1"
regex = "1.11"
glob = "0.3"
futures = "0.3"
async-trait = "0.1"
bytes = "1.8"

# WASM runtime (optional for script mode)
wasmtime = "41.0"

# Config
config = "0.15"

# System directories
directories = "6.0"

# Axum for HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
