[package]
name = "skillsrs"
version = "0.1.7"
edition = "2021"
authors = ["skills.rs team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/labiium/skills"
description = "Infinite Skills. Finite Context. - Unified MCP server aggregating tools and skills with 99% token reduction"
readme = "README.md"
keywords = ["mcp", "skills", "tools", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"

[lib]
name = "skillsrs"
path = "src/lib.rs"

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.14.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
rmcp-macros = "0.14.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "1.2", features = ["derive"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "stream"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1.5"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1"
regex = "1.11"
glob = "0.3"
futures = "0.3"
async-trait = "0.1"
bytes = "1.11"

# Filesystem watching
notify = "8.2"

# Config
config = "0.15"

# System directories
directories = "6.0"

# Server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Semver parsing
semver = "1.0"

# Temp directories for 'skills add' and sync
tempfile = "3.24"

# WASM runtime
wasmtime = { version = "26.0", features = ["cranelift"] }

# Docker sandboxing
bollard = { version = "0.18", features = ["ssl"] }
http = "1.0"
wasmtime-wasi = "26.0"
wasi-common = "26.0"
cap-std = "3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
