[package]
name = "skillsrs-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skillsrs-core = { workspace = true }
skillsrs-registry = { workspace = true }
skillsrs-index = { workspace = true }
skillsrs-runtime = { workspace = true }
skillsrs-policy = { workspace = true }
skillsrs-upstream = { workspace = true }
skillsrs-skillstore = { workspace = true }

# MCP SDK
rmcp = { workspace = true }
rmcp-macros = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3.24"
