[package]
name = "skillsrs-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime execution engine for skills.rs - Sandboxed skill execution with WASM support"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skillsrs-core = { workspace = true }
skillsrs-registry = { workspace = true }
skillsrs-upstream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Optional WASM runtime
wasmtime = { version = "41.0", optional = true }

[features]
default = []
wasm = ["wasmtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
