[package]
name = "skillsrs-upstream"
version.workspace = true
edition.workspace = true
description = "Upstream MCP server integration for skills.rs - Connect and aggregate external MCP servers"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skillsrs-core = { workspace = true }
skillsrs-registry = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Process management
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
